# nowidget

./: .buildinfo  LICENSE  _config.yml  _toc.yml  genindex.html  objects.inv  pyproject.toml  readme.html  readme.md  requirements.txt  sanitize.cfg  search.html  searchindex.js
.github/workflows/: docs.yml
_sources/nowidget/tests/: test_nowidget.ipynb  test_states.ipynb  test_test.ipynb
nowidget/: __init__.py  base.py  kernel.py  readme.html  readme.md  shell.py  states.py  template.py  test.py  trace.py  util.py
nowidget/tests/: test_nowidget.html  test_states.html  test_test.html  test_test.ipynb  test_trace.html  test_trace.ipynb
