[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "nowidget"
author = "tonyfast"
author-email = "tony.fast@gmail.com"
home-page = "http://github.com/deathbeds/nowidget"
classifiers = ["License :: OSI Approved :: MIT License"]
requires=["jinja2", "monkeytype"]

[tool.flit.metadata.requires-extra]
test = ["pytest", "nbval", "pandas"]
doc = ["jupyter-book", "pyppeteer",  "doit", "hypothesis"]


[tool.pytest.ini_options]
addopts = "--nbval nowidget/tests --sanitize-with sanitize.cfg -p no:warnings -p no:importnb -pno:pidgy"